# nova-video-converter

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  Task.md  Task_EditRoom.md  Task_New.md  pubspec.yaml  run.sh  terminal.txt  ОПИСАНИЕ_ПРОГРАММЫ.txt
.github/workflows/: build.yml  release.yml
app_bridge/: Cargo.toml  build.rs
crates/audio_engine/: Cargo.toml
crates/audio_engine/src/: lib.rs  pipeline.rs
crates/effects_core/: Cargo.toml
crates/effects_core/src/: effect_registry.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: dispatcher.rs  lib.rs  state.rs
crates/engine_api/: Cargo.toml
crates/engine_api/src/: command.rs  error.rs  event.rs  lib.rs  query.rs  types.rs
crates/expression_engine/: Cargo.toml
crates/expression_engine/src/: lib.rs  runtime.rs
crates/media_ffmpeg/: Cargo.toml
crates/media_ffmpeg/src/: decode.rs  encode.rs  error.rs  lib.rs  probe.rs
crates/media_ffmpeg/tests/: test_encode.rs  test_scene_split.rs
crates/media_image/: Cargo.toml
crates/media_image/src/: decode.rs  error.rs  lib.rs  probe.rs
crates/project_schema/: Cargo.toml
crates/project_schema/src/: asset.rs  composition.rs  io.rs  lib.rs  migration.rs  schema.rs  sequence.rs  settings.rs  validation.rs  xml_parser.rs
crates/project_schema/tests/: test_xml_parser.rs
crates/render_graph/: Cargo.toml
crates/render_graph/src/: graph.rs  lib.rs
crates/timeline_core/: Cargo.toml
crates/timeline_core/src/: interpolation.rs  lib.rs  time.rs
lib/: main.dart
lib/core/constants/: app_constants.dart
lib/core/theme/: app_theme.dart
lib/data/models/: video_models.dart
lib/ffmpeg/: bitrate_calculator.dart  ffmpeg_service.dart
lib/l10n/: app_en.arb  app_ru.arb
lib/presentation/providers/: app_providers.dart
lib/presentation/screens/: home_screen.dart
lib/presentation/widgets/: common_widgets.dart  file_card.dart  settings_widgets.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
ui_qt/: CMakeLists.txt
ui_qt/qml/: Main.qml  NovaApp.qml
ui_qt/qml/components/: AssetContextMenu.qml  BinContextMenu.qml  CommandPalette.qml  MenuBar.qml  NewSequenceDialog.qml  NovaButton.qml  NovaStatusBar.qml  PanelHeader.qml  SplashScreen.qml  WorkspaceSwitcher.qml
ui_qt/qml/panels/: EffectControlsPanel.qml  GraphEditorPanel.qml  ProjectPanel.qml  PropertiesPanel.qml  RenderQueuePanel.qml  TimelinePanel.qml  ToolbarPanel.qml  ViewerPanel.qml
ui_qt/qml/rooms/: AIVideoRoom.qml  ColorGradingRoom.qml  CompositingRoom.qml  EditRoom.qml  ExportDialog.qml  KeyingRoom.qml  MotionPacksRoom.qml  NodeGraphRoom.qml  ParticlesRoom.qml  RiggingRoom.qml  Scene3DRoom.qml  TrackingRoom.qml
ui_qt/qml/theme/: NovaTheme.qml
ui_qt/resources/: nova-compositor.desktop
ui_qt/resources/fonts/: FONTS_REQUIRED.md
ui_qt/resources/icons/: ICONS_REQUIRED.md
ui_qt/src/: main.cpp  novabridge.cpp  novabridgestub.cpp  novabridgestub.h  novavideoprovider.cpp  novavideoprovider.h
windows/: CMakeLists.txt  inno-setup.iss
windows/runner/: Runner.rc  main.cpp
