[workspace]
resolver = "2"
members = [
    "crates/engine_api",
    "crates/project_schema",
    "crates/timeline_core",
    "crates/effects_core",
    "crates/render_graph",
    "crates/media_ffmpeg",
    "crates/audio_engine",
    "crates/expression_engine",
    "crates/engine", "app_bridge",
    "crates/media_image",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nova Compositor Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nova-compositor/nova"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Testing
pretty_assertions = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
