[workspace]
resolver = "2"
members = [
    "crates/engine_api",
    "crates/project_schema",
    "crates/timeline_core",
    "crates/effects_core",
    "crates/render_graph",
    "crates/media_ffmpeg",
    "crates/audio_engine",
    "crates/expression_engine",
    "crates/engine", "app_bridge",
    "crates/media_image",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nova Compositor Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nova-compositor/nova"

[workspace.dependencies]
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Async
tokio = { version = "1.44", features = ["full"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Time
chrono = { version = "0.4.41", features = ["serde"] }

# Testing
pretty_assertions = "1.4.1"
tempfile = "3.19"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
