[package]
name = "app_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.166"
serde_json = "1.0.140"
engine_api = { path = "../crates/engine_api" }
project_schema = { path = "../crates/project_schema" }
media_ffmpeg = { version = "0.1.0", path = "../crates/media_ffmpeg" }
engine = { path = "../crates/engine" }
media_image = { path = "../crates/media_image" }

[build-dependencies]
cxx-build = "1.0.166"

[dev-dependencies]
tempfile.workspace = true
