cmake_minimum_required(VERSION 3.22)
project(NovaCompositor VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

# Route the binary to build/bin/ so it doesn't collide with the
# build/NovaCompositor/ QML module directory created by qt_add_qml_module.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
# ── Qt 6 ──────────────────────────────────────────────────────────────────────
find_package(Qt6 REQUIRED COMPONENTS
    Core Quick QuickControls2 Gui Widgets
)

# ── FFmpeg ────────────────────────────────────────────────────────────────────
find_package(PkgConfig REQUIRED)
pkg_check_modules(FFMPEG REQUIRED IMPORTED_TARGET
    libavcodec
    libavformat
    libavutil
    libswscale
    libswresample
    libavfilter
    libavdevice
)

# ── Sources ───────────────────────────────────────────────────────────────────
set(SOURCES
    src/main.cpp
    src/novabridgestub.h
    src/novabridge.cpp
    src/novavideoprovider.cpp
)

set(QML_FILES
    qml/Main.qml
    qml/NovaApp.qml
    qml/components/SplashScreen.qml
    qml/panels/ProjectPanel.qml
    qml/panels/ViewerPanel.qml
    qml/panels/TimelinePanel.qml
    qml/panels/ToolbarPanel.qml
    qml/panels/EffectControlsPanel.qml
    qml/panels/PropertiesPanel.qml
    qml/panels/GraphEditorPanel.qml
    qml/panels/RenderQueuePanel.qml
    qml/components/PanelHeader.qml
    qml/components/NovaButton.qml
    qml/components/NovaStatusBar.qml
    qml/components/WorkspaceSwitcher.qml
    qml/components/CommandPalette.qml
    qml/components/MenuBar.qml
    qml/components/AssetContextMenu.qml
    qml/components/BinContextMenu.qml
    qml/components/NewSequenceDialog.qml
    qml/rooms/EditRoom.qml
    qml/rooms/CompositingRoom.qml
    qml/rooms/NodeGraphRoom.qml
    qml/rooms/ColorGradingRoom.qml
    qml/rooms/KeyingRoom.qml
    qml/rooms/Scene3DRoom.qml
    qml/rooms/TrackingRoom.qml
    qml/rooms/RiggingRoom.qml
    qml/rooms/AIVideoRoom.qml
    qml/rooms/ParticlesRoom.qml
    qml/rooms/MotionPacksRoom.qml
)

set(RESOURCE_FILES
    resources/resources.qrc
)

# ── Target ────────────────────────────────────────────────────────────────────
qt_add_executable(NovaCompositor
    ${SOURCES}
)

qt_add_qml_module(NovaCompositor
    URI NovaCompositor
    VERSION 1.0
    QML_FILES ${QML_FILES}
)

qt_add_resources(NovaCompositor "nova_resources"
    PREFIX "/"
    FILES
        resources/icons/nova_app_icon.png
        resources/splash/splash.png
)

# ── Link ──────────────────────────────────────────────────────────────────────
target_link_libraries(NovaCompositor PRIVATE
    Qt6::Core
    Qt6::Quick
    Qt6::QuickControls2
    Qt6::Gui
    Qt6::Widgets
    PkgConfig::FFMPEG
)

target_include_directories(NovaCompositor PRIVATE
    src/
)

# ── Rust Integration (Manual Cargo Build) ──────────────────────────────────────
# Since Corrosion fails to find the local toolchain reliably, we build it directly.
set(APP_BRIDGE_DIR ${CMAKE_SOURCE_DIR}/../app_bridge)
set(APP_BRIDGE_LIB ${CMAKE_SOURCE_DIR}/../target/debug/libapp_bridge.a)

add_custom_command(
    OUTPUT ${APP_BRIDGE_LIB}
    COMMAND cargo build --manifest-path ${APP_BRIDGE_DIR}/Cargo.toml
    DEPENDS ${APP_BRIDGE_DIR}/src/lib.rs ${APP_BRIDGE_DIR}/build.rs
    COMMENT "Building Rust app_bridge library..."
)

add_custom_target(app_bridge_target DEPENDS ${APP_BRIDGE_LIB})

# Add the compiled Rust library as an imported target
add_library(app_bridge STATIC IMPORTED GLOBAL)
set_target_properties(app_bridge PROPERTIES IMPORTED_LOCATION ${APP_BRIDGE_LIB})
add_dependencies(app_bridge app_bridge_target)

# Include the headers generated by cxx
target_include_directories(NovaCompositor PRIVATE ${CMAKE_SOURCE_DIR}/../target/cxxbridge)

# Link the app_bridge static library to NovaCompositor
target_link_libraries(NovaCompositor PRIVATE app_bridge)

# ── Install ───────────────────────────────────────────────────────────────────
install(TARGETS NovaCompositor
    RUNTIME DESTINATION bin
)

# ── macOS/Windows app metadata ────────────────────────────────────────────────
if(APPLE)
    set_target_properties(NovaCompositor PROPERTIES
        MACOSX_BUNDLE TRUE
        MACOSX_BUNDLE_GUI_IDENTIFIER "com.novacompositor.app"
        MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
        MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    )
endif()

if(WIN32)
    set_target_properties(NovaCompositor PROPERTIES
        WIN32_EXECUTABLE TRUE
    )
endif()
